{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 25,
  "lineage": "7255b26a-0a9d-61a5-7b0a-57964c9087c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "orbit_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0be2988e4d5a5c301",
            "arn": "arn:aws:ec2:eu-west-1:901465080034:instance/i-09d9097ee35c40cd6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "orbitatlas3d-dev-ec2-cloudwatch-profile",
            "id": "i-09d9097ee35c40cd6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01eae5cc796c5e039"
              }
            ],
            "primary_network_interface_id": "eni-01eae5cc796c5e039",
            "private_dns": "ip-10-20-1-181.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.181",
            "public_dns": "ec2-34-243-14-105.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.243.14.105",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-072097ebe048d6ad9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd892343ff697b05",
            "tags": {
              "Environment": "dev",
              "Name": "orbitatlas3d-dev-server",
              "Project": "OrbitAtlas3D"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "orbitatlas3d-dev-server",
              "Project": "OrbitAtlas3D"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c2899b20553e4b88"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_cloudwatch_profile",
            "aws_iam_role.ec2_cloudwatch_role",
            "aws_internet_gateway.orbit_igw",
            "aws_route_table.orbit_public_rt",
            "aws_route_table_association.orbit_public_rta",
            "aws_security_group.orbit_sg",
            "aws_subnet.orbit_public_subnet",
            "aws_vpc.orbit_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "null_resource.verify_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "orbit_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:901465080034:internet-gateway/igw-089764d5a0dd78af1",
            "id": "igw-089764d5a0dd78af1",
            "owner_id": "901465080034",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "orbitatlas3d-dev-igw",
              "Project": "OrbitAtlas3D"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "orbitatlas3d-dev-igw",
              "Project": "OrbitAtlas3D"
            },
            "vpc_id": "vpc-06cf5fbdbc8a79209"
          },
          "dependencies": [
            "aws_vpc.orbit_vpc",
            "data.aws_caller_identity.current",
            "null_resource.verify_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "orbit_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:901465080034:route-table/rtb-0676ff46df40738d7",
            "id": "rtb-0676ff46df40738d7",
            "owner_id": "901465080034",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089764d5a0dd78af1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "orbitatlas3d-dev-public-rt",
              "Project": "OrbitAtlas3D"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "orbitatlas3d-dev-public-rt",
              "Project": "OrbitAtlas3D"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cf5fbdbc8a79209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.orbit_igw",
            "aws_vpc.orbit_vpc",
            "data.aws_caller_identity.current",
            "null_resource.verify_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "orbit_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6b885318fe79a09",
            "region": "eu-west-1",
            "route_table_id": "rtb-0676ff46df40738d7",
            "subnet_id": "subnet-0bd892343ff697b05"
          },
          "dependencies": [
            "aws_internet_gateway.orbit_igw",
            "aws_route_table.orbit_public_rt",
            "aws_subnet.orbit_public_subnet",
            "aws_vpc.orbit_vpc",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "null_resource.verify_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "orbit_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:901465080034:security-group/sg-0c2899b20553e4b88",
            "description": "Security group for OrbitAtlas3D dev EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2899b20553e4b88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Vite dev / web",
                "from_port": 5173,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5173
              }
            ],
            "name": "orbitatlas3d-dev-sg",
            "name_prefix": "",
            "owner_id": "901465080034",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "orbitatlas3d-dev-sg",
              "Project": "OrbitAtlas3D"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "orbitatlas3d-dev-sg",
              "Project": "OrbitAtlas3D"
            },
            "timeouts": null,
            "vpc_id": "vpc-06cf5fbdbc8a79209"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.orbit_vpc",
            "data.aws_caller_identity.current",
            "null_resource.verify_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "orbit_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:901465080034:subnet/subnet-0bd892343ff697b05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd892343ff697b05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "901465080034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "orbitatlas3d-dev-public-subnet",
              "Project": "OrbitAtlas3D"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "orbitatlas3d-dev-public-subnet",
              "Project": "OrbitAtlas3D"
            },
            "vpc_id": "vpc-06cf5fbdbc8a79209"
          },
          "dependencies": [
            "aws_vpc.orbit_vpc",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "null_resource.verify_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "orbit_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:901465080034:vpc/vpc-06cf5fbdbc8a79209",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-02acd8260d2d02471",
            "default_route_table_id": "rtb-064f6094c25def013",
            "default_security_group_id": "sg-094ddd3439b7dbda0",
            "dhcp_options_id": "dopt-0b094248338704a75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cf5fbdbc8a79209",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064f6094c25def013",
            "owner_id": "901465080034",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "orbitatlas3d-dev-vpc",
              "Project": "OrbitAtlas3D"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "orbitatlas3d-dev-vpc",
              "Project": "OrbitAtlas3D"
            }
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "null_resource.verify_account"
          ]
        }
      ]
    }
  ]
}